# country_codes

./: README.md  pubspec.yaml
android/: build.gradle
android/src/main/kotlin/com/miguelruivo/flutter/plugin/countrycodes/country_codes/: CountryCodesPlugin.kt
ios/Classes/: SwiftCountryCodesPlugin.swift
lib/: country_codes.dart
lib/src/: country_codes.dart  country_constants.dart  country_model.codegen.dart  dial_code_formatter.dart  language_codes.dart  language_constants.dart  language_model.dart  method_channel.dart
macos/Classes/: CountryCodesPlugin.swift
windows/: CMakeLists.txt  country_codes_plugin.cpp  country_codes_plugin.h  ountry_codes_plugin_c_api.cpp
windows/include/country_codes/: country_codes_plugin_c_api.h
